--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Marcos Bellucci
-email: MarcosBellucci@gmail.com
+email: delbetu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal website to show who am i and how i work.
 baseurl: "" # the subpath of your site, e.g. /blog
