Add disqus comments

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,8 @@ plugins:
 
 # Build settings
 markdown: kramdown
+
+# Disqus Comments
+disqus:
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: delbetu
