--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,14 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://delbetu.github.io"
 twitter_username: delbetu
 github_username:  delbetu
+
 plugins:
   - jemoji
 
 # Build settings
 markdown: kramdown
+
+# Disqus Comments
+disqus:
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: delbetu
